# SO1_1S2024_201900462

./: README.md
HojasDeTrabajo/HT1/: .gitignore  Makefile  README.md
HojasDeTrabajo/HT1/agent/: app.go  go.mod  main.go  wails.json
HojasDeTrabajo/HT1/kernel_module/: ram_module.c
Proyecto1/: README.md  create-table.sql  docker-compose.yml  load-kernel.sh  login-db.sh
Proyecto1/broker-backend/: Dockerfile  go.mod  go.sum  main.go
Proyecto1/broker-backend/config/: config.go
Proyecto1/kernel/: .gitignore  Makefile  cpu_module.c  ram_module.c
Proyecto1/monitor-frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
Proyecto2/: .gitignore  README.md  create-cluster.sh  docker-compose.yml  kubernetes.yaml  register-topic.sh
Proyecto2/consumer/: go.mod  go.sum  main.go
Proyecto2/golang-client/: Dockerfile  go.mod  go.sum  main.go
Proyecto2/golang-producer/: Dockerfile  go.mod  go.sum  main.go
Proyecto2/locust/: Pipfile  locustfile.py  music.json
Proyecto2/node-log/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
Proyecto2/rust-kafka-producer/: Cargo.toml  Dockerfile
Proyecto2/rust-wasm-client/: Cargo.toml  Dockerfile  my_nginx.conf
Proyecto2/rust-wasm-client/src/: lib.rs  main.rs
Proyecto2/vue-log/: Dockerfile  README.md  nginx.conf  ngnix.conf  package-lock.json  package.json
Proyecto2/wasm-producer/: Cargo.toml  Dockerfile
Tareas/tarea1/: README.md  docker-run.sh
Tareas/tarea2/: README.md  docker-compose.yml  endproc.ps1  startup.sh
Tareas/tarea3/: README.md
Tareas/tarea4/: .gitignore  README.md
(+52 files in other folders)
