[package]
name = "wasm_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3.55", features = ["Headers","Request", "RequestInit", "Response", "Window", "console"] }
js-sys = "0.3.55"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.28"  # Check for the latest compatible version

# Añade wasm-bindgen-test para pruebas
[dev-dependencies]
wasm-bindgen-test = "0.3"
